--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<!doctype html>
-<html lang="eng-us">
-    <head>
-        <title>Test Page</title>
-    </head>
-    <body>
-    </body>
-    
+responsive-portfolio page
